--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Client</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Fora Poligrafia</title>
+    <base href="/" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <!--    <link href="favicon.ico" rel="icon" type="image/x-icon" />-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="darkView">
+    <main class="wrapperSite">
+      <app-root class="wrapperElements"></app-root>
+    </main>
+    <script
+      crossorigin="anonymous"
+      src="https://kit.fontawesome.com/6f8733b591.js"
+    ></script>
+  </body>
 </html>
