--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <base href="/" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <!--    <link href="favicon.ico" rel="icon" type="image/x-icon" />-->
+    <link href="/icons/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap"
       rel="stylesheet"
