add favicon and meta tags to index on google

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,21 @@
     <title>Fora Poligrafia</title>
     <base href="/" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <!--    <link href="favicon.ico" rel="icon" type="image/x-icon" />-->
+    <link href="/Favicon.ico" rel="icon" type="image/x-icon" />
     <link href="/icons/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap"
       rel="stylesheet"
     />
+    <meta
+      content=" Kompleksowo zbudujemy wizerunek Twojej firmy ---- Fora poligrafia - kompleksowe usługi poligraficzne, znakowanie odzieży, reklama na samochodach oraz witrynach sklepowych. Tworzenie grafiki. Druk materiałów reklamowych. Legionowo, Wieliszew, Warszawa, Jabłonna"
+      name="description"
+    />
+    <meta
+      content="poligrafia Legonowo, poligrafia Warszawa, usługi poligraficzne, grafika, wizytówki Legionowo, reklama na samochód, znakowanie odzieży, gadżety reklamowe, Legionowo i okolice, reklama Warszawa, reklama Wieliszew, gadżety reklamowe, grafika Wieliszew"
+      name="keywords"
+    />
+    <meta content="Fora Poligrafia" name="author" />
   </head>
   <body class="darkView">
     <main class="wrapperSite">
